--- a/scss/style.scss
+++ b/scss/style.scss
@@ -159,6 +159,7 @@ body{
         
         li{
             padding-bottom: 20px;
+            box-shadow: 0px 2px 10px 0px rgba(#000000,0.08);
             img{
                 display:block;
                 margin: 0 auto;
@@ -210,7 +211,7 @@ body{
         li{
             width: 230px;
             height: 280px;
-            box-shadow: 0px 0px 5px 0px gray;
+            box-shadow: 0px 2px 10px 0px rgba(#000000,0.08);
             margin-bottom: 28px;
 
             padding-top: 32px;
@@ -242,7 +243,7 @@ body{
 }
 
 .card{
-    margin: 0 auto;
+    margin:  auto;
     max-width: 1088px;
 
     h3{
@@ -254,27 +255,40 @@ body{
         display: flex;
         flex-wrap: wrap;
         justify-content: space-around;
-
+        margin-top: 104px;
         
         li{
             width: 325px;
+            position: relative;
             margin-bottom: 24px;
+            box-shadow: 0px 2px 10px 0px rgba(#000000,0.08);
             img{
                 display:block;
+                position: absolute;
+                top: -60px;
+                left: 16px;
             }
             p{
                 font-size: 16px;
                 line-height: 35px;
                 font-weight: bold;
+                margin-top: 24px;
+                margin-left: 32px;
             }
-            a{
+            .opinion{
+                display: block;
                 font-size: 16px;
                 line-height: 24px;
+                margin: 48px 32px 0;
+                padding-bottom: 24px;
+                border-bottom: 2px solid #DDDDDD;
             }
 
             .star{
                 display: flex;
                 justify-content: space-between;
+                margin:0;
+                margin: 0px 32px 24px;
             }
         }
 
