--- a/css/style.css
+++ b/css/style.css
@@ -82,6 +82,7 @@ body .bt {
   margin: 0 auto;
   max-width: 1366px;
   position: relative;
+  overflow: hidden;
 }
 
 .wrap .bgimg {
@@ -89,13 +90,23 @@ body .bt {
   z-index: -1;
 }
 
-.wrap .yw {
+.wrap .r-0 {
   right: 0;
 }
 
-.wrap .ball {
+.wrap .l250-t600 {
   left: -250px;
   top: 600px;
+}
+
+.wrap .r100-t1740 {
+  right: -100px;
+  top: 1740px;
+}
+
+.wrap .l100-t1740 {
+  left: 80px;
+  top: 2780px;
 }
 
 .navbar {
@@ -234,6 +245,7 @@ body .bt {
 }
 
 .actor ul li {
+  background-color: #fff;
   padding-bottom: 20px;
   -webkit-box-shadow: 0px 2px 10px 0px rgba(0, 0, 0, 0.08);
           box-shadow: 0px 2px 10px 0px rgba(0, 0, 0, 0.08);
@@ -350,9 +362,10 @@ body .bt {
 .card ul li {
   width: 325px;
   position: relative;
-  margin-bottom: 24px;
+  margin-bottom: 100px;
   -webkit-box-shadow: 0px 2px 10px 0px rgba(0, 0, 0, 0.08);
           box-shadow: 0px 2px 10px 0px rgba(0, 0, 0, 0.08);
+  background-color: #fff;
 }
 
 .card ul li img {
@@ -391,7 +404,6 @@ body .bt {
 }
 
 footer {
-  margin-top: 100px;
   position: relative;
   text-align: center;
 }
