--- a/scss/style.scss
+++ b/scss/style.scss
@@ -50,12 +50,12 @@ body{
 
     .r100-t1740{
         right: -100px;
-        top:1740px
+        top:1740px;
     }
 
     .l100-t1740{
         left: 80px;
-        top:2780px
+        top:2780px;
     }
 
 
