--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,5 +1,11 @@
 @import 'reset.scss';
 
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
+
 .button{
     width: 128px;
     height: 40px;
@@ -70,12 +76,12 @@ body{
     max-width: 1085px;
 
     .logo{
-        margin: 24px;
+        margin: 24px 0 24px 24px;
         width: 218px;
     }
     
     .navbt{
-        margin: 24px;
+        margin: 24px 24px 24px 0px;
         background-color: #FF5D50;
     }
 
@@ -154,7 +160,7 @@ body{
     max-width: 1088px;
     margin: 0 auto;
     margin-top: 100px;
-    margin-bottom: 100px;
+    margin-bottom: 70px;
 
     h3{
         text-align: center;
@@ -173,6 +179,7 @@ body{
         li{
             background-color: #fff;
             padding-bottom: 20px;
+            margin-bottom: 30px;
             box-shadow: 0px 2px 10px 0px rgba(#000000,0.08);
             img{
                 display:block;
@@ -202,9 +209,9 @@ body{
     justify-content: space-between;
     align-items: center;
     max-width: 1085px;
-    margin: 0% auto;
-    margin-top: 80px;
-    margin-bottom: 100px;
+    margin: auto;
+    margin-bottom: 72px;
+
 
 
     p{
@@ -316,30 +323,98 @@ footer{
     text-align: center;
     
     img{
-
+        display: block;
+        position: absolute;
+        width: 100%;
         top: 0;
         left: 0;
         z-index: -1;
     }
     h3{
-        margin-top: 230;
+        padding-top: 230px;
+        margin-bottom: 48px;
     }
 
     div{
-        position: absolute;
-        top: 60%;
-        left: 50%;
-        transform: translate(-50%,-50%);
         P{
             margin: auto;
-            margin-top: 48px;
         }
+
     }
 
     .ft{
-        margin: 0;
+        margin-top: 100px;
         padding: 16px;
         background-color: #F5F5F5;
+    }
+
+}
+
+@media screen and (max-width: 375px) {
+
+    .wrap{
+        .bg{
+
+            display: none;
+        }
+    }
+
+    .navbar{
+
+        .logo{
+            margin: 24px 0 24px 20px;
+            width: 218px;
+        }
+        
+        .navbt{
+            margin: 24px 20px 24px 0px;
+            background-color: #FF5D50;
+        }
+    }
+
+    .banner{
+        margin: 0 20px 0 20px;
+        ul{
+            li{
+                h2{
+                    font-size: 32px;
+                    line-height: 46px;
+                }
+            }
+        }
+
+    }
+
+    h3{
+        font-size: 28px;
+    }
+
+    .guild{
+        text-align: center;
+        margin: 0 20px 0 20px;
+
+        h3{
+            margin-bottom: 16px;
+        }
+
+        .button{
+            margin: 0 auto;
+            margin-top: 16px;
+            margin-bottom: 16px;
+        }
+
+        ul{
+
+            li{
+                margin: 0 auto;
+                margin-bottom: 24px;
+                padding-top: 32px;
+                padding-left: 0px;
+            }
+
+
+        }
+
     }
 
 }
