--- a/scss/style.scss
+++ b/scss/style.scss
@@ -24,6 +24,10 @@
 }
 
 body{
+    h2{
+        font-size: 48px;
+    }
+
     h3{
         font-size: 32px;
         line-height: 46px;
@@ -76,12 +80,12 @@ body{
     max-width: 1085px;
 
     .logo{
-        margin: 24px 0 24px 24px;
+        margin: 24px 24px 24px 0px;
         width: 218px;
     }
     
     .navbt{
-        margin: 24px 24px 24px 0px;
+        margin: 24px 0 24px 24px;
         background-color: #FF5D50;
     }
 
@@ -213,7 +217,6 @@ body{
     margin-bottom: 72px;
 
 
-
     p{
         font-size: 18px;
         line-height: 26px;
@@ -234,9 +237,14 @@ body{
             height: 280px;
             box-shadow: 0px 2px 10px 0px rgba(#000000,0.08);
             margin-bottom: 28px;
-
             padding-top: 32px;
             padding-left: 32px;
+
+            img{
+                border-radius: 50px;
+                box-shadow: 0 1px 5px 0 rgba(#000000,0.08);
+                padding: 10px;
+            }
 
             a{
                 display: block;
