--- a/scss/_media.scss
+++ b/scss/_media.scss
@@ -42,8 +42,10 @@
 
     .vipcard{
         .candyfather{
+            width: 80%;
+            margin: auto;
             .both{
-                width: 100%;
+                width: 80%;
                 .submenu{
                     display: inline-block;
                 }
@@ -51,7 +53,6 @@
         }
     }
 }
-
 
 @media screen and (max-width: 768px) {
     .navbgimg{
@@ -83,6 +84,15 @@
 
     .card{
         @include column-center;
+    }
+
+    .vipcard{
+        .candyfather{
+            width: 100%;
+            .both{
+                width: 100%;
+            }
+        }
     }
 }
 
