--- a/scss/_style.scss
+++ b/scss/_style.scss
@@ -172,7 +172,7 @@ footer{
             padding: 29px;
             border: 1px solid rgba(#000,0.08);
             margin-bottom: 94px;
-            margin-right: 8px;
+
             background-color: #fff;
 
             h4{
@@ -192,6 +192,10 @@ footer{
                     padding: 20px;
                     background-color: #F5F5F5;
                     border-radius: 20px;
+                    a{
+                        display: block;
+                        width: 100%;
+                    }
                 }
             }
             
@@ -200,6 +204,7 @@ footer{
                     text-align: left;
                     margin-right: 10px;
                     padding: 10px 0;
+
                     img{
                         padding-right: 13px;
                         vertical-align: middle;
