--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -146,7 +146,7 @@ h3{
 .regular20{
     font-family: 'Noto Sans TC';
     font-weight: 400;
-    font-size: 16px;
+    font-size: 20px;
     color: #221e1f;
     line-height: 29px;
 }
@@ -207,6 +207,11 @@ h3{
 .block{
     display: block;
 }
+
+.inline-block{
+    display: inline-block;
+}
+
 .ta-center{
     text-align: center;
 }
