--- a/scss/_media.scss
+++ b/scss/_media.scss
@@ -35,7 +35,15 @@
     .actor{
         ul{
             li{
-                width: 50%;
+                width: 40%;
+            }
+        }
+    }
+
+    .guild{
+        ul{
+            li{
+                width: 40%;
             }
         }
     }
@@ -71,13 +79,10 @@
         @include column-center;
     }
 
-    .guild{
-        .button{
-            margin: auto;
-        }
+    .actor{
         ul{
             li{
-                width: 100%;
+                width: 45%;
             }
         }
     }
@@ -85,6 +90,15 @@
     .card{
         @include column-center;
     }
+
+    .swiper { 
+        .swiper-wrapper{
+            .swiper-slide {
+                width: 50%;
+            }
+        }
+    }    
+
 
     .vipcard{
         .candyfather{
@@ -140,6 +154,18 @@
     .actor{
         @include column-center
     }
+
+    .guild{
+        @include column-center
+    }
+
+    .swiper { 
+        .swiper-wrapper{
+            .swiper-slide {
+                width: 100%;
+            }
+        }
+    }    
 }
 
 @media screen and (max-width: 375px) {
