--- a/scss/all.scss
+++ b/scss/all.scss
@@ -2,5 +2,6 @@
 @import '_reset.scss';
 @import '_base.scss';
 @import '_bgimg.scss';
+@import '_swipier.scss';
 @import '_style.scss';
 @import '_media.scss';
