--- a/css/all.css
+++ b/css/all.css
@@ -662,6 +662,10 @@ footer .ft {
 }
 
 @media screen and (max-width: 1280px) {
+  .banner {
+    -ms-flex-pack: distribute;
+        justify-content: space-around;
+  }
   .guild {
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
@@ -687,6 +691,24 @@ footer .ft {
 }
 
 @media screen and (max-width: 980px) {
+  .banner {
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+  .banner ul {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    width: 100%;
+  }
+  .banner ul li {
+    width: 80%;
+  }
   .actor ul li {
     width: 40%;
   }
@@ -708,9 +730,6 @@ footer .ft {
 @media screen and (max-width: 768px) {
   .navbgimg {
     display: none;
-  }
-  .banner .bannerbg-img .bannerbgimg {
-    display: block;
   }
   .platform ul {
     -webkit-box-orient: vertical;
@@ -741,7 +760,7 @@ footer .ft {
   .card ul li {
     width: 80%;
   }
-  .swiper .swiper-wrapper .swiper-slide {
+  .card .swiper .swiper-wrapper .swiper-slide {
     width: 50%;
   }
   .vipcard .candyfather {
@@ -809,7 +828,7 @@ footer .ft {
   .guild ul li {
     width: 80%;
   }
-  .swiper .swiper-wrapper .swiper-slide {
+  .card .swiper .swiper-wrapper .swiper-slide {
     width: 100%;
   }
 }
