--- a/scss/_media.scss
+++ b/scss/_media.scss
@@ -10,6 +10,10 @@
 }
 
 @media screen and (max-width: 1280px) {
+    .banner{
+        justify-content: space-around;
+    }
+
     .guild{
         flex-direction: column;
         
@@ -32,6 +36,11 @@
 }
 
 @media screen and (max-width: 980px){
+    .banner{
+        @include column-center;
+        justify-content: center;
+    }
+
     .actor{
         ul{
             li{
@@ -65,14 +74,6 @@
 @media screen and (max-width: 768px) {
     .navbgimg{
         display: none;
-    }
-
-    .banner{
-        .bannerbg-img{
-            .bannerbgimg{
-                display: block;
-            }
-        }
     }
 
     .platform{
